# cli-pong

cli/: Cargo.toml
cli/src/: main.rs
frontend/: pnpm-lock.yaml
frontend/src/: app.html
frontend/src/routes/: +page.svelte
server/: Cargo.toml
server/src/: game.rs  main.rs
src/: display.rs  game.rs  main.rs
