[package]
name = "pong-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "*"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
